--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="title" content="Why Hiring a Local Locksmith in Orlando Is Better Than DIY Fixes">
   <meta name="description" content="Learn why hiring a professional local locksmith in Orlando is smarter and safer than trying DIY lock repairs. Save time, money, and ensure your security.">
-  <meta name="canonical" content="https://yourdomain.com/why-hiring-a-local-locksmith-in-orlando-is-better-than-diy-fixes">
+  <meta name="canonical" content="https://solar-energy-6kt.pages.dev/">
+  <meta name="google-site-verification" content="SsVqFr9x2cjgXDiakw7XUxRssTOcKenHJWE5lCAcf04" />
   <title>Why Hiring a Local Locksmith in Orlando Is Better Than DIY Fixes</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
@@ -168,3 +169,4 @@
   </div>
 </body>
 </html>
+
