--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="title" content="Why Hiring a Local Locksmith in Orlando Is Better Than DIY Fixes">
   <meta name="description" content="Learn why hiring a professional local locksmith in Orlando is smarter and safer than trying DIY lock repairs. Save time, money, and ensure your security.">
   <meta name="google-site-verification" content="SsVqFr9x2cjgXDiakw7XUxRssTOcKenHJWE5lCAcf04" />
-  <link rel="canonical" href="https://solar-energy-6kt.pages.dev/" />
+  <link rel="canonical" href="https://hirelocal-locksmith.pages.dev" />
   <title>Why Hiring a Local Locksmith in Orlando Is Better Than DIY Fixes</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
@@ -169,5 +169,6 @@
   </div>
 </body>
 </html>
+
 
 
